// adservice-go/proto/hipstershop.proto

syntax = "proto3";

package hipstershop;

option go_package = "github.com/norun9/microservices-demo-ambient/src/adservice-go/genproto/hipstershop";

// -----------------Ad service------------------

service AdService {
    rpc GetAds(AdRequest) returns (AdResponse) {}
}

message AdRequest {
    // List of important key words from the current page describing the context.
    repeated string context_keys = 1;
}

message AdResponse {
    repeated Ad ads = 1;
}

message Ad {
    // url to redirect to when an ad is clicked.
    string redirect_url = 1;

    // short advertisement text to display.
    string text = 2;
}

// （以下、他サービスの定義は今回は省略してもかまいません。
//  必要に応じて Java と同じプロジェクト構成を使う場合は
//  CartService, CheckoutService, 等の定義をすべてここに含めてください。）
//  今回 Go サーバーでは AdService のみ実装するので、Ad Service 定義だけでも動作します。
